--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,16 @@
 <html>
 <head>
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+  html{
+    height: 100%;
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  #speechToText:focus{
+    outline: none;
+  }
 .center {
   display: block;
   margin-left: auto;
@@ -12,14 +22,17 @@
 }
 #nav {
   list-style-type: none;
-  margin-top:0;
+  margin:0;
   padding: 0;
   overflow: hidden;
-  background-color: #008080;
+  background: #2193b0;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 h2
 {
-  color: #008080;
+  color:#2193b0;
 }
 
 .li {
@@ -28,7 +41,7 @@ h2
 
 .li a {
   display: block;
-  color: #393f4d;
+  color: #fff;
   font-size: 20px;
   font-weight: bold;
   padding: 14px 16px;
@@ -36,29 +49,29 @@ h2
 }
 
 li a:hover {
-  background-color: #393f4d;
-  color: #008080;
+  color: #000;
   font-weight: bold;
+  border-bottom:2px solid #000;
 }
 .form-style button{
 
   width: 89%;
 	height:70%;
 	padding: 5%;
-	background: #008080;
+	background:#2193b0;
 	border-bottom: 2px solid #393f4d;;
 	border-top-style: none;
 	border-right-style: none;
 	border-left-style: none;
-	color: #393f4d;
+	color: #fff;
   font-weight: bold;
   font-size: 28px;
   font-family: "Times New Roman";
 }
 
 .form-style button:hover {
-  background-color: #393f4d;
-  color: #008080;
+  background-color: #0047AB;
+  color: #fff;
   font-weight: bold;
 }
 .split {
@@ -74,12 +87,12 @@ li a:hover {
 
 .left {
   left: 15;
-  border-right: 0px #008080 solid;
+  border-right: 0px #2193b0 solid;
 }
 
 .right {
   right: 0;
-  border-left: 1px #008080 solid;
+  border-left: 1px#2193b0 solid;
 }
 
 .mytext {
@@ -97,7 +110,7 @@ li a:hover {
 
   .mic {
       border:1px solid #393f4d;
-      background:#008080;
+      background: #2193b0;
       vertical-align:top;
       padding:0px;
       margin:0;
@@ -111,31 +124,30 @@ li a:hover {
   
 
 .submit {
-    border:1px solid #393f4d;
+    border-radius: 15px;
     height: 42px;
     width: 160px;
     text-align: center;
-    background-color: #008080;
-    color: #393f4d;
+    background-color: #2193b0;
+    color: #fff;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
     font-family: "Times New Roman";
     vertical-align:top;
 }
 .submit:hover {
-  background-color: #393f4d;
-  color: #008080;
+  background-color: #0047AB;
   font-weight: bold;
 }
 .td {
-  color: #008080;
+  color: #2193b0;
   font-weight: bold;
   font-size: 20px;
 }
 
 body
 {
-  background-color: #404040
+  background-color: #fff;
 }
 
 .form-style{
@@ -152,7 +164,7 @@ body
   font-family: "Times New Roman";
 	text-align: center;
 	margin: -16px -16px 16px -16px;
-  color:#008080
+  color:#2193b0;
 }
 .form-style input[type="text"],
 .form-style input[type="password"],
@@ -210,20 +222,29 @@ body
 
 
 .site-form span,label{
-  color: #008080;
+  color: #2193b0;
 }
 .errorlist{
     color: red;
     font-weight: bold;
 }
+#header{
+  background: #2193b0;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+color: #fff;
+height: 60px;
+}
+body{
+  margin:0;
+}
 </style>
 <title>Homepage</title>
 </head>
-<div style="background-color:#404040;color:#008080;padding:10 10 1 10;border: 1px #008080 groove;margin-bottom:0;">
+<div id = 'header' style="margin:0;">
 
-<h1 align=center>Speech To Sign Language</h1>
+<h1 style="margin:0; padding-top: 8px;" align=center>Speech To Sign Language</h1>
 </div>
-<br>
 <body>
 <ul id="nav">
   <li class="li"><a class="active" href="{% url 'home' %}">Home</a></li>
@@ -243,7 +264,5 @@ body
   {% block content %}
   {% endblock %}
 </div>
-
-
 </body>
 </html>
