--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,13 @@
 
 
 {% block content %}
-<video width="500" height="380" class="center" autoplay loop>
-  <source src= "{% static 'Hello.mp4' %}" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
-	<div class="form-style" align="middle" >
-	<a href="{% url 'animation' %}"><button class="button">Click to Start</button></a>
-	</div>
+<div style="margin-top: 20px;">
+	<video width="500" height="380" class="center" autoplay loop>
+		<source src= "{% static 'Hello.mp4' %}" type="video/mp4">
+		Your browser does not support the video tag.
+	  </video>
+		  <div class="form-style" align="middle" >
+		  <a href="{% url 'animation' %}"><button class="button">Click to Start</button></a>
+		  </div>
+</div>
 {% endblock %}
